html, css thông tin về địa chỉ giao hàng

--- a/pet.html
+++ b/pet.html
@@ -27,19 +27,19 @@
         <div class="product-infomation">
             <!-- Image product infromation -->
             <div class="image">
-                <div class="img-large"><img class="img" src="./image/pets/alaska.jpg" alt="alaska"></div>
+                <div class="img-large"><img class="img" src="./images/pets/alaska.jpg" alt="alaska"></div>
                 <div class="img-small-group">
                     <div class="img-small-row">
-                        <img src="./image/pets/alaska.jpg" alt="alaska" class="img-small">
+                        <img src="./images/pets/alaska.jpg" alt="alaska" class="img-small">
                     </div>
                     <div class="img-small-row">
-                        <img src="./image/pets/alaska.jpg" alt="alaska" class="img-small">
+                        <img src="./images/pets/alaska.jpg" alt="alaska" class="img-small">
                     </div>
                     <div class="img-small-row">
-                        <img src="./image/pets/alaska.jpg" alt="alaska" class="img-small">
+                        <img src="./images/pets/alaska.jpg" alt="alaska" class="img-small">
                     </div>
                     <div class="img-small-row">
-                        <img src="./image/pets/alaska.jpg" alt="alaska" class="img-small">
+                        <img src="./images/pets/alaska.jpg" alt="alaska" class="img-small">
                     </div>
                 </div>
             </div>
@@ -214,7 +214,7 @@
                                 <i class="fa-solid fa-star"></i>
                                 <i class="fa-solid fa-star"></i>
                             </div>
-                            <img src="./image/pets/alaska.jpg" alt="image-product" class="image-product">
+                            <img src="./images/pets/alaska.jpg" alt="image-product" class="image-product">
                         </div>
                         <div class="product-information">
                             <div class="price-product">
@@ -235,7 +235,7 @@
                                 <i class="fa-solid fa-star"></i>
                                 <i class="fa-solid fa-star"></i>
                             </div>
-                            <img src="./image/pets/alaska.jpg" alt="image-product" class="image-product">
+                            <img src="./images/pets/alaska.jpg" alt="image-product" class="image-product">
                         </div>
                         <div class="product-information">
                             <div class="price-product">
@@ -256,7 +256,7 @@
                                 <i class="fa-solid fa-star"></i>
                                 <i class="fa-solid fa-star"></i>
                             </div>
-                            <img src="./image/pets/alaska.jpg" alt="image-product" class="image-product">
+                            <img src="./images/pets/alaska.jpg" alt="image-product" class="image-product">
                         </div>
                         <div class="product-information">
                             <div class="price-product">
@@ -277,7 +277,7 @@
                                 <i class="fa-solid fa-star"></i>
                                 <i class="fa-solid fa-star"></i>
                             </div>
-                            <img src="./image/pets/alaska.jpg" alt="image-product" class="image-product">
+                            <img src="./images/pets/alaska.jpg" alt="image-product" class="image-product">
                         </div>
                         <div class="product-information">
                             <div class="price-product">
@@ -322,7 +322,7 @@
                                 <i class="fa-solid fa-star"></i>
                                 <i class="fa-solid fa-star"></i>
                             </div>
-                            <img src="./image/pets/alaska.jpg" alt="image-product" class="image-product">
+                            <img src="./images/pets/alaska.jpg" alt="image-product" class="image-product">
                         </div>
                         <div class="product-information">
                             <div class="price-product">
@@ -343,7 +343,7 @@
                                 <i class="fa-solid fa-star"></i>
                                 <i class="fa-solid fa-star"></i>
                             </div>
-                            <img src="./image/pets/alaska.jpg" alt="image-product" class="image-product">
+                            <img src="./images/pets/alaska.jpg" alt="image-product" class="image-product">
                         </div>
                         <div class="product-information">
                             <div class="price-product">
@@ -364,7 +364,7 @@
                                 <i class="fa-solid fa-star"></i>
                                 <i class="fa-solid fa-star"></i>
                             </div>
-                            <img src="./image/pets/alaska.jpg" alt="image-product" class="image-product">
+                            <img src="./images/pets/alaska.jpg" alt="image-product" class="image-product">
                         </div>
                         <div class="product-information">
                             <div class="price-product">
@@ -385,7 +385,7 @@
                                 <i class="fa-solid fa-star"></i>
                                 <i class="fa-solid fa-star"></i>
                             </div>
-                            <img src="./image/pets/alaska.jpg" alt="image-product" class="image-product">
+                            <img src="./images/pets/alaska.jpg" alt="image-product" class="image-product">
                         </div>
                         <div class="product-information">
                             <div class="price-product">
