--- a/pets.html
+++ b/pets.html
@@ -223,7 +223,7 @@
                                 <i class="fa-solid fa-star"></i>
                                 <i class="fa-solid fa-star"></i>
                             </div>
-                            <img src="./image/pets/alaska.jpg" alt="image-product" class="image-product">
+                            <img src="./images/pets/alaska.jpg" alt="image-product" class="image-product">
                         </div>
                         <div class="product-information">
                             <div class="price-product">
@@ -244,7 +244,7 @@
                                 <i class="fa-solid fa-star"></i>
                                 <i class="fa-solid fa-star"></i>
                             </div>
-                            <img src="./image/pets/alaska.jpg" alt="image-product" class="image-product">
+                            <img src="./images/pets/alaska.jpg" alt="image-product" class="image-product">
                         </div>
                         <div class="product-information">
                             <div class="price-product">
@@ -265,7 +265,7 @@
                                 <i class="fa-solid fa-star"></i>
                                 <i class="fa-solid fa-star"></i>
                             </div>
-                            <img src="./image/pets/alaska.jpg" alt="image-product" class="image-product">
+                            <img src="./images/pets/alaska.jpg" alt="image-product" class="image-product">
                         </div>
                         <div class="product-information">
                             <div class="price-product">
@@ -286,7 +286,7 @@
                                 <i class="fa-solid fa-star"></i>
                                 <i class="fa-solid fa-star"></i>
                             </div>
-                            <img src="./image/pets/alaska.jpg" alt="image-product" class="image-product">
+                            <img src="./images/pets/alaska.jpg" alt="image-product" class="image-product">
                         </div>
                         <div class="product-information">
                             <div class="price-product">
@@ -307,7 +307,7 @@
                                 <i class="fa-solid fa-star"></i>
                                 <i class="fa-solid fa-star"></i>
                             </div>
-                            <img src="./image/pets/alaska.jpg" alt="image-product" class="image-product">
+                            <img src="./images/pets/alaska.jpg" alt="image-product" class="image-product">
                         </div>
                         <div class="product-information">
                             <div class="price-product">
@@ -328,7 +328,7 @@
                                 <i class="fa-solid fa-star"></i>
                                 <i class="fa-solid fa-star"></i>
                             </div>
-                            <img src="./image/pets/alaska.jpg" alt="image-product" class="image-product">
+                            <img src="./images/pets/alaska.jpg" alt="image-product" class="image-product">
                         </div>
                         <div class="product-information">
                             <div class="price-product">
@@ -349,7 +349,7 @@
                                 <i class="fa-solid fa-star"></i>
                                 <i class="fa-solid fa-star"></i>
                             </div>
-                            <img src="./image/pets/alaska.jpg" alt="image-product" class="image-product">
+                            <img src="./images/pets/alaska.jpg" alt="image-product" class="image-product">
                         </div>
                         <div class="product-information">
                             <div class="price-product">
@@ -370,7 +370,7 @@
                                 <i class="fa-solid fa-star"></i>
                                 <i class="fa-solid fa-star"></i>
                             </div>
-                            <img src="./image/pets/alaska.jpg" alt="image-product" class="image-product">
+                            <img src="./images/pets/alaska.jpg" alt="image-product" class="image-product">
                         </div>
                         <div class="product-information">
                             <div class="price-product">
@@ -392,7 +392,7 @@
                                 <i class="fa-solid fa-star"></i>
                                 <i class="fa-solid fa-star"></i>
                             </div>
-                            <img src="./image/pets/alaska.jpg" alt="image-product" class="image-product">
+                            <img src="./images/pets/alaska.jpg" alt="image-product" class="image-product">
                         </div>
                         <div class="product-information">
                             <div class="price-product">
