html, css xác nhận đặt hàng thành công

--- a/transpost.html
+++ b/transpost.html
@@ -18,7 +18,7 @@
     </section>
 
     <!-- Container -->
-    <section class="page-container" id="cart">
+    <section class="page-container" id="transpost">
         <!-- Progress bar -->
         <div class="progress-bar">
             <ul class="bar">
