html, css payment

--- a/cart.html
+++ b/cart.html
@@ -70,7 +70,7 @@
                 <div class="cart-product">
                     <div class="product">
                         <input type="checkbox" name="checkbox" id="product-1">
-                        <img src="./image/products/image-1.jpg" alt="image-product" class="image-product"> 
+                        <img src="./images/products/image-1.jpg" alt="image-product" class="image-product"> 
                         <label for="product-1">
                             <span class="product-name">Thức ăn hạt cho mèo Me-O 350g</span>
                         </label>
@@ -85,7 +85,7 @@
                     </div>
                     <div class="product">
                         <input type="checkbox" name="checkbox" id="product-2">
-                        <img src="./image/products/image-1.jpg" alt="image-product" class="image-product"> 
+                        <img src="./images/products/rectangle-38.png" alt="image-product" class="image-product"> 
                         <label for="product-2">
                             <span class="product-name">Sữa tắm cho chó mèo Dorrikey 510ml</span>
                         </label>
@@ -100,7 +100,7 @@
                     </div>
                     <div class="product">
                         <input type="checkbox" name="checkbox" id="product-3">
-                        <img src="./image/pets/alaska.jpg" alt="image-product" class="image-product"> 
+                        <img src="./images/pets/alaska.jpg" alt="image-product" class="image-product"> 
                         <label for="product-3">
                             <span class="product-name">Alaska Malamute trắng xám</span>
                         </label>
