--- a/confirm.html
+++ b/confirm.html
@@ -53,7 +53,7 @@
             </ul>
         </div>
 
-        <!-- Cart content -->
+        <!-- Confirm content -->
         <div class="confirm-content">
             <div class="content">
                 <div class="image"></div>
