--- a/pets.html
+++ b/pets.html
@@ -110,19 +110,8 @@
             <div id="product-list"></div>
             <!-- Pagination -->
             <div class="pagination-container">
-                <button class="btn-prep">
-                    <i class="fa-solid fa-caret-left"></i>
-                </button>
-                <ul class="pagination">
-                    <li class="page-product" value="1">1</li>
-                    <li class="page-product" value="2">2</li>
-                    <li class="page-product" value="3">3</li>
-                    <li class="page-product" value="4">...</li>
-                    <li class="page-product" value="5">16</li>
-                </ul>
-                <button class="btn-next">
-                    <i class="fa-solid fa-caret-right"></i>
-                </button>
+                <!-- <div class="pagination"> -->
+                </div>
             </div>
         </div>
     </section>
