fix js pagination, js-html sort

--- a/pets.html
+++ b/pets.html
@@ -91,15 +91,14 @@
             <div class="results-header">
                 <!-- Showing num product available -->
                 <div class="result-count">
-                    <p>Hiển thị 1 - 16 trong số 238 kết quả</p>
+                    
                 </div>
         
                 <!-- Sort options -->
                 <div class="sort-options">
                     <p>Sắp xếp theo:</p>
                     <select class="sort-select">
-                        <option value="newest">Mới nhất</option>
-                        <option value="best-sellers">Bán chạy nhất</option>
+                        <option value="sort" selected>Sắp xếp theo</option>
                         <option value="low-to-high">Giá: Thấp đến cao</option>
                         <option value="high-to-low">Giá: Cao đến thấp</option>
                     </select>
